# squattr

./: Cargo.toml
core/: Cargo.toml
core/src/: ast.rs  attribute.rs  dym.rs  errors.rs  expand.rs  lib.rs  types.rs
derive/: Cargo.toml
derive/src/: lib.rs
internals/: Cargo.toml
internals/src/: ast.rs  attribute.rs  attributes.rs  expand.rs  lib.rs  parser.rs  types.rs
src/: lib.rs
tests/: derive.rs
