[package]
name = "squattr-core"
version = "0.1.0"
edition = "2024"

[dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.40"
strsim = "0.11.1"
syn = "2.0.100"

[features]
debug = ["syn/extra-traits"]

[dev-dependencies]
colored = "3.0.0"
colored-diff = "0.2.3"
pretty_assertions = "1.4.1"
prettyplease = "0.2.32"
syn = { version = "2.0.100", features = ["extra-traits"] }
